Adding user MVC and container test for repository and mock for service (#5)
Add tests to UserController